// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`paths > generates blogPagePaths 1`] = `
[MockFunction spy] {
  "calls": [
    [
      [
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 1",
          },
          "id": "en/2020/09/1/test-article.md",
          "slug": "en/2020/09/1/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 2",
          },
          "id": "en/2020/09/2/test-article.md",
          "slug": "en/2020/09/2/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 3",
          },
          "id": "en/2020/09/3/test-article.md",
          "slug": "en/2020/09/3/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 4",
          },
          "id": "en/2020/09/4/test-article.md",
          "slug": "en/2020/09/4/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 5",
          },
          "id": "en/2020/09/5/test-article.md",
          "slug": "en/2020/09/5/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 6",
          },
          "id": "en/2020/09/6/test-article.md",
          "slug": "en/2020/09/6/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 7",
          },
          "id": "en/2020/09/7/test-article.md",
          "slug": "en/2020/09/7/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 8",
          },
          "id": "en/2020/09/8/test-article.md",
          "slug": "en/2020/09/8/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 9",
          },
          "id": "en/2020/09/9/test-article.md",
          "slug": "en/2020/09/9/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 10",
          },
          "id": "en/2020/09/10/test-article.md",
          "slug": "en/2020/09/10/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 11",
          },
          "id": "en/2020/09/11/test-article.md",
          "slug": "en/2020/09/11/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 12",
          },
          "id": "en/2020/09/12/test-article.md",
          "slug": "en/2020/09/12/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 13",
          },
          "id": "en/2020/09/13/test-article.md",
          "slug": "en/2020/09/13/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 14",
          },
          "id": "en/2020/09/14/test-article.md",
          "slug": "en/2020/09/14/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 15",
          },
          "id": "en/2020/09/15/test-article.md",
          "slug": "en/2020/09/15/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 16",
          },
          "id": "en/2020/09/16/test-article.md",
          "slug": "en/2020/09/16/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 17",
          },
          "id": "en/2020/09/17/test-article.md",
          "slug": "en/2020/09/17/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 18",
          },
          "id": "en/2020/09/18/test-article.md",
          "slug": "en/2020/09/18/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 19",
          },
          "id": "en/2020/09/19/test-article.md",
          "slug": "en/2020/09/19/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 20",
          },
          "id": "en/2020/09/20/test-article.md",
          "slug": "en/2020/09/20/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 21",
          },
          "id": "en/2020/09/21/test-article.md",
          "slug": "en/2020/09/21/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 22",
          },
          "id": "en/2020/09/22/test-article.md",
          "slug": "en/2020/09/22/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 23",
          },
          "id": "en/2020/09/23/test-article.md",
          "slug": "en/2020/09/23/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 24",
          },
          "id": "en/2020/09/24/test-article.md",
          "slug": "en/2020/09/24/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 25",
          },
          "id": "en/2020/09/25/test-article.md",
          "slug": "en/2020/09/25/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 26",
          },
          "id": "en/2020/09/26/test-article.md",
          "slug": "en/2020/09/26/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 27",
          },
          "id": "en/2020/09/27/test-article.md",
          "slug": "en/2020/09/27/test-article",
        },
      ],
      {
        "pageSize": 10,
        "params": {
          "blog": "blog",
          "locale": undefined,
        },
        "props": {
          "locale": "en",
          "translations": {
            "de": "/de/blog",
            "en": "/blog",
          },
        },
      },
    ],
    [
      [
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 1",
          },
          "id": "de/2020/09/1/test-article.md",
          "slug": "de/2020/09/1/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 2",
          },
          "id": "de/2020/09/2/test-article.md",
          "slug": "de/2020/09/2/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 3",
          },
          "id": "de/2020/09/3/test-article.md",
          "slug": "de/2020/09/3/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 4",
          },
          "id": "de/2020/09/4/test-article.md",
          "slug": "de/2020/09/4/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 5",
          },
          "id": "de/2020/09/5/test-article.md",
          "slug": "de/2020/09/5/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 6",
          },
          "id": "de/2020/09/6/test-article.md",
          "slug": "de/2020/09/6/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 7",
          },
          "id": "de/2020/09/7/test-article.md",
          "slug": "de/2020/09/7/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 8",
          },
          "id": "de/2020/09/8/test-article.md",
          "slug": "de/2020/09/8/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 9",
          },
          "id": "de/2020/09/9/test-article.md",
          "slug": "de/2020/09/9/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 10",
          },
          "id": "de/2020/09/10/test-article.md",
          "slug": "de/2020/09/10/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 11",
          },
          "id": "de/2020/09/11/test-article.md",
          "slug": "de/2020/09/11/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 12",
          },
          "id": "de/2020/09/12/test-article.md",
          "slug": "de/2020/09/12/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 13",
          },
          "id": "de/2020/09/13/test-article.md",
          "slug": "de/2020/09/13/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 14",
          },
          "id": "de/2020/09/14/test-article.md",
          "slug": "de/2020/09/14/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 15",
          },
          "id": "de/2020/09/15/test-article.md",
          "slug": "de/2020/09/15/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 16",
          },
          "id": "de/2020/09/16/test-article.md",
          "slug": "de/2020/09/16/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 17",
          },
          "id": "de/2020/09/17/test-article.md",
          "slug": "de/2020/09/17/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 18",
          },
          "id": "de/2020/09/18/test-article.md",
          "slug": "de/2020/09/18/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 19",
          },
          "id": "de/2020/09/19/test-article.md",
          "slug": "de/2020/09/19/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 20",
          },
          "id": "de/2020/09/20/test-article.md",
          "slug": "de/2020/09/20/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 21",
          },
          "id": "de/2020/09/21/test-article.md",
          "slug": "de/2020/09/21/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 22",
          },
          "id": "de/2020/09/22/test-article.md",
          "slug": "de/2020/09/22/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 23",
          },
          "id": "de/2020/09/23/test-article.md",
          "slug": "de/2020/09/23/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 24",
          },
          "id": "de/2020/09/24/test-article.md",
          "slug": "de/2020/09/24/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 25",
          },
          "id": "de/2020/09/25/test-article.md",
          "slug": "de/2020/09/25/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 26",
          },
          "id": "de/2020/09/26/test-article.md",
          "slug": "de/2020/09/26/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 27",
          },
          "id": "de/2020/09/27/test-article.md",
          "slug": "de/2020/09/27/test-article",
        },
      ],
      {
        "pageSize": 10,
        "params": {
          "blog": "blog",
          "locale": "de",
        },
        "props": {
          "locale": "de",
          "translations": {
            "de": "/de/blog",
            "en": "/blog",
          },
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`paths > generates blogTagPagePaths 1`] = `
[MockFunction spy] {
  "calls": [
    [
      [
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 23",
          },
          "id": "en/2020/09/23/test-article.md",
          "slug": "en/2020/09/23/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 22",
          },
          "id": "en/2020/09/22/test-article.md",
          "slug": "en/2020/09/22/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 21",
          },
          "id": "en/2020/09/21/test-article.md",
          "slug": "en/2020/09/21/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 20",
          },
          "id": "en/2020/09/20/test-article.md",
          "slug": "en/2020/09/20/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 19",
          },
          "id": "en/2020/09/19/test-article.md",
          "slug": "en/2020/09/19/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 18",
          },
          "id": "en/2020/09/18/test-article.md",
          "slug": "en/2020/09/18/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 17",
          },
          "id": "en/2020/09/17/test-article.md",
          "slug": "en/2020/09/17/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 16",
          },
          "id": "en/2020/09/16/test-article.md",
          "slug": "en/2020/09/16/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 15",
          },
          "id": "en/2020/09/15/test-article.md",
          "slug": "en/2020/09/15/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 14",
          },
          "id": "en/2020/09/14/test-article.md",
          "slug": "en/2020/09/14/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 13",
          },
          "id": "en/2020/09/13/test-article.md",
          "slug": "en/2020/09/13/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 12",
          },
          "id": "en/2020/09/12/test-article.md",
          "slug": "en/2020/09/12/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 11",
          },
          "id": "en/2020/09/11/test-article.md",
          "slug": "en/2020/09/11/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 10",
          },
          "id": "en/2020/09/10/test-article.md",
          "slug": "en/2020/09/10/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 9",
          },
          "id": "en/2020/09/9/test-article.md",
          "slug": "en/2020/09/9/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 8",
          },
          "id": "en/2020/09/8/test-article.md",
          "slug": "en/2020/09/8/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 7",
          },
          "id": "en/2020/09/7/test-article.md",
          "slug": "en/2020/09/7/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 6",
          },
          "id": "en/2020/09/6/test-article.md",
          "slug": "en/2020/09/6/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 5",
          },
          "id": "en/2020/09/5/test-article.md",
          "slug": "en/2020/09/5/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 4",
          },
          "id": "en/2020/09/4/test-article.md",
          "slug": "en/2020/09/4/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 3",
          },
          "id": "en/2020/09/3/test-article.md",
          "slug": "en/2020/09/3/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 2",
          },
          "id": "en/2020/09/2/test-article.md",
          "slug": "en/2020/09/2/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 1",
          },
          "id": "en/2020/09/1/test-article.md",
          "slug": "en/2020/09/1/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 27",
          },
          "id": "en/2020/09/27/test-article.md",
          "slug": "en/2020/09/27/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 26",
          },
          "id": "en/2020/09/26/test-article.md",
          "slug": "en/2020/09/26/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 25",
          },
          "id": "en/2020/09/25/test-article.md",
          "slug": "en/2020/09/25/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 24",
          },
          "id": "en/2020/09/24/test-article.md",
          "slug": "en/2020/09/24/test-article",
        },
      ],
      {
        "pageSize": 10,
        "params": {
          "blog": "blog",
          "locale": undefined,
          "tag": "tag1",
        },
        "props": {
          "locale": "en",
          "tag": "tag1",
          "translations": {
            "de": "/de/blog/tag1",
            "en": "/blog/tag1",
          },
        },
      },
    ],
    [
      [
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 23",
          },
          "id": "en/2020/09/23/test-article.md",
          "slug": "en/2020/09/23/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 22",
          },
          "id": "en/2020/09/22/test-article.md",
          "slug": "en/2020/09/22/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 21",
          },
          "id": "en/2020/09/21/test-article.md",
          "slug": "en/2020/09/21/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 20",
          },
          "id": "en/2020/09/20/test-article.md",
          "slug": "en/2020/09/20/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 19",
          },
          "id": "en/2020/09/19/test-article.md",
          "slug": "en/2020/09/19/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 18",
          },
          "id": "en/2020/09/18/test-article.md",
          "slug": "en/2020/09/18/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 17",
          },
          "id": "en/2020/09/17/test-article.md",
          "slug": "en/2020/09/17/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 16",
          },
          "id": "en/2020/09/16/test-article.md",
          "slug": "en/2020/09/16/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 15",
          },
          "id": "en/2020/09/15/test-article.md",
          "slug": "en/2020/09/15/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 14",
          },
          "id": "en/2020/09/14/test-article.md",
          "slug": "en/2020/09/14/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 13",
          },
          "id": "en/2020/09/13/test-article.md",
          "slug": "en/2020/09/13/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 12",
          },
          "id": "en/2020/09/12/test-article.md",
          "slug": "en/2020/09/12/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 11",
          },
          "id": "en/2020/09/11/test-article.md",
          "slug": "en/2020/09/11/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 10",
          },
          "id": "en/2020/09/10/test-article.md",
          "slug": "en/2020/09/10/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 9",
          },
          "id": "en/2020/09/9/test-article.md",
          "slug": "en/2020/09/9/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 8",
          },
          "id": "en/2020/09/8/test-article.md",
          "slug": "en/2020/09/8/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 7",
          },
          "id": "en/2020/09/7/test-article.md",
          "slug": "en/2020/09/7/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 6",
          },
          "id": "en/2020/09/6/test-article.md",
          "slug": "en/2020/09/6/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 5",
          },
          "id": "en/2020/09/5/test-article.md",
          "slug": "en/2020/09/5/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 4",
          },
          "id": "en/2020/09/4/test-article.md",
          "slug": "en/2020/09/4/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 3",
          },
          "id": "en/2020/09/3/test-article.md",
          "slug": "en/2020/09/3/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 2",
          },
          "id": "en/2020/09/2/test-article.md",
          "slug": "en/2020/09/2/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 1",
          },
          "id": "en/2020/09/1/test-article.md",
          "slug": "en/2020/09/1/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 27",
          },
          "id": "en/2020/09/27/test-article.md",
          "slug": "en/2020/09/27/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 26",
          },
          "id": "en/2020/09/26/test-article.md",
          "slug": "en/2020/09/26/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 25",
          },
          "id": "en/2020/09/25/test-article.md",
          "slug": "en/2020/09/25/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 24",
          },
          "id": "en/2020/09/24/test-article.md",
          "slug": "en/2020/09/24/test-article",
        },
      ],
      {
        "pageSize": 10,
        "params": {
          "blog": "blog",
          "locale": undefined,
          "tag": "tag2",
        },
        "props": {
          "locale": "en",
          "tag": "tag2",
          "translations": {
            "de": "/de/blog/tag2",
            "en": "/blog/tag2",
          },
        },
      },
    ],
    [
      [
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 23",
          },
          "id": "de/2020/09/23/test-article.md",
          "slug": "de/2020/09/23/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 22",
          },
          "id": "de/2020/09/22/test-article.md",
          "slug": "de/2020/09/22/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 21",
          },
          "id": "de/2020/09/21/test-article.md",
          "slug": "de/2020/09/21/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 20",
          },
          "id": "de/2020/09/20/test-article.md",
          "slug": "de/2020/09/20/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 19",
          },
          "id": "de/2020/09/19/test-article.md",
          "slug": "de/2020/09/19/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 18",
          },
          "id": "de/2020/09/18/test-article.md",
          "slug": "de/2020/09/18/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 17",
          },
          "id": "de/2020/09/17/test-article.md",
          "slug": "de/2020/09/17/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 16",
          },
          "id": "de/2020/09/16/test-article.md",
          "slug": "de/2020/09/16/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 15",
          },
          "id": "de/2020/09/15/test-article.md",
          "slug": "de/2020/09/15/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 14",
          },
          "id": "de/2020/09/14/test-article.md",
          "slug": "de/2020/09/14/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 13",
          },
          "id": "de/2020/09/13/test-article.md",
          "slug": "de/2020/09/13/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 12",
          },
          "id": "de/2020/09/12/test-article.md",
          "slug": "de/2020/09/12/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 11",
          },
          "id": "de/2020/09/11/test-article.md",
          "slug": "de/2020/09/11/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 10",
          },
          "id": "de/2020/09/10/test-article.md",
          "slug": "de/2020/09/10/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 9",
          },
          "id": "de/2020/09/9/test-article.md",
          "slug": "de/2020/09/9/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 8",
          },
          "id": "de/2020/09/8/test-article.md",
          "slug": "de/2020/09/8/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 7",
          },
          "id": "de/2020/09/7/test-article.md",
          "slug": "de/2020/09/7/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 6",
          },
          "id": "de/2020/09/6/test-article.md",
          "slug": "de/2020/09/6/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 5",
          },
          "id": "de/2020/09/5/test-article.md",
          "slug": "de/2020/09/5/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 4",
          },
          "id": "de/2020/09/4/test-article.md",
          "slug": "de/2020/09/4/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 3",
          },
          "id": "de/2020/09/3/test-article.md",
          "slug": "de/2020/09/3/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 2",
          },
          "id": "de/2020/09/2/test-article.md",
          "slug": "de/2020/09/2/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 1",
          },
          "id": "de/2020/09/1/test-article.md",
          "slug": "de/2020/09/1/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 27",
          },
          "id": "de/2020/09/27/test-article.md",
          "slug": "de/2020/09/27/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 26",
          },
          "id": "de/2020/09/26/test-article.md",
          "slug": "de/2020/09/26/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 25",
          },
          "id": "de/2020/09/25/test-article.md",
          "slug": "de/2020/09/25/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 24",
          },
          "id": "de/2020/09/24/test-article.md",
          "slug": "de/2020/09/24/test-article",
        },
      ],
      {
        "pageSize": 10,
        "params": {
          "blog": "blog",
          "locale": "de",
          "tag": "tag1",
        },
        "props": {
          "locale": "de",
          "tag": "tag1",
          "translations": {
            "de": "/de/blog/tag1",
            "en": "/blog/tag1",
          },
        },
      },
    ],
    [
      [
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 23",
          },
          "id": "de/2020/09/23/test-article.md",
          "slug": "de/2020/09/23/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 22",
          },
          "id": "de/2020/09/22/test-article.md",
          "slug": "de/2020/09/22/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 21",
          },
          "id": "de/2020/09/21/test-article.md",
          "slug": "de/2020/09/21/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 20",
          },
          "id": "de/2020/09/20/test-article.md",
          "slug": "de/2020/09/20/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 19",
          },
          "id": "de/2020/09/19/test-article.md",
          "slug": "de/2020/09/19/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 18",
          },
          "id": "de/2020/09/18/test-article.md",
          "slug": "de/2020/09/18/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 17",
          },
          "id": "de/2020/09/17/test-article.md",
          "slug": "de/2020/09/17/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 16",
          },
          "id": "de/2020/09/16/test-article.md",
          "slug": "de/2020/09/16/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 15",
          },
          "id": "de/2020/09/15/test-article.md",
          "slug": "de/2020/09/15/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 14",
          },
          "id": "de/2020/09/14/test-article.md",
          "slug": "de/2020/09/14/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 13",
          },
          "id": "de/2020/09/13/test-article.md",
          "slug": "de/2020/09/13/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 12",
          },
          "id": "de/2020/09/12/test-article.md",
          "slug": "de/2020/09/12/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 11",
          },
          "id": "de/2020/09/11/test-article.md",
          "slug": "de/2020/09/11/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 10",
          },
          "id": "de/2020/09/10/test-article.md",
          "slug": "de/2020/09/10/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 9",
          },
          "id": "de/2020/09/9/test-article.md",
          "slug": "de/2020/09/9/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 8",
          },
          "id": "de/2020/09/8/test-article.md",
          "slug": "de/2020/09/8/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 7",
          },
          "id": "de/2020/09/7/test-article.md",
          "slug": "de/2020/09/7/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 6",
          },
          "id": "de/2020/09/6/test-article.md",
          "slug": "de/2020/09/6/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 5",
          },
          "id": "de/2020/09/5/test-article.md",
          "slug": "de/2020/09/5/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 4",
          },
          "id": "de/2020/09/4/test-article.md",
          "slug": "de/2020/09/4/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 3",
          },
          "id": "de/2020/09/3/test-article.md",
          "slug": "de/2020/09/3/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 2",
          },
          "id": "de/2020/09/2/test-article.md",
          "slug": "de/2020/09/2/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 1",
          },
          "id": "de/2020/09/1/test-article.md",
          "slug": "de/2020/09/1/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 27",
          },
          "id": "de/2020/09/27/test-article.md",
          "slug": "de/2020/09/27/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 26",
          },
          "id": "de/2020/09/26/test-article.md",
          "slug": "de/2020/09/26/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 25",
          },
          "id": "de/2020/09/25/test-article.md",
          "slug": "de/2020/09/25/test-article",
        },
        {
          "collection": "blog",
          "data": {
            "tags": [
              "tag1",
              "tag2",
            ],
            "title": "Test Article 24",
          },
          "id": "de/2020/09/24/test-article.md",
          "slug": "de/2020/09/24/test-article",
        },
      ],
      {
        "pageSize": 10,
        "params": {
          "blog": "blog",
          "locale": "de",
          "tag": "tag2",
        },
        "props": {
          "locale": "de",
          "tag": "tag2",
          "translations": {
            "de": "/de/blog/tag2",
            "en": "/blog/tag2",
          },
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`paths > generates entryPaths 1`] = `
[
  {
    "params": {
      "locale": "de",
      "pages": "2020/09/11/testartikel",
    },
    "props": {
      "collection": "pages",
      "data": {
        "title": "Testartikel",
      },
      "id": "de/2020/09/11/test-article.md",
      "locale": "de",
      "slug": "de/2020/09/11/test-article",
      "translations": {
        "de": "/de/2020/09/11/testartikel",
        "en": "/2020/09/11/test-article",
      },
    },
  },
  {
    "params": {
      "locale": undefined,
      "pages": "2020/09/11/test-article",
    },
    "props": {
      "collection": "pages",
      "data": {
        "title": "Test Article",
      },
      "id": "en/2020/09/11/test-article.md",
      "locale": "en",
      "slug": "en/2020/09/11/test-article",
      "translations": {
        "de": "/de/2020/09/11/testartikel",
        "en": "/2020/09/11/test-article",
      },
    },
  },
]
`;

exports[`paths > generates entryPaths 2`] = `
[
  {
    "params": {
      "docs": "doku",
      "locale": "de",
      "slug": "2020/09/11/testartikel",
    },
    "props": {
      "collection": "docs",
      "data": {
        "title": "Testartikel",
      },
      "id": "de/2020/09/11/test-article.md",
      "locale": "de",
      "slug": "de/2020/09/11/test-article",
      "translations": {
        "de": "/de/doku/2020/09/11/testartikel",
        "en": "/docs/2020/09/11/test-article",
      },
    },
  },
  {
    "params": {
      "docs": "docs",
      "locale": undefined,
      "slug": "2020/09/11/test-article",
    },
    "props": {
      "collection": "docs",
      "data": {
        "title": "Test Article",
      },
      "id": "en/2020/09/11/test-article.md",
      "locale": "en",
      "slug": "en/2020/09/11/test-article",
      "translations": {
        "de": "/de/doku/2020/09/11/testartikel",
        "en": "/docs/2020/09/11/test-article",
      },
    },
  },
]
`;

exports[`paths > generates indexPaths 1`] = `
[
  {
    "params": {
      "locale": undefined,
    },
    "props": {
      "locale": "en",
      "translations": {
        "de": "/de",
        "en": "/",
      },
    },
  },
  {
    "params": {
      "locale": "de",
    },
    "props": {
      "locale": "de",
      "translations": {
        "de": "/de",
        "en": "/",
      },
    },
  },
]
`;

exports[`paths > generates indexPaths with kind 1`] = `
[
  {
    "params": {
      "docs": "docs",
      "locale": undefined,
    },
    "props": {
      "locale": "en",
      "translations": {
        "de": "/de/doku",
        "en": "/docs",
      },
    },
  },
  {
    "params": {
      "docs": "doku",
      "locale": "de",
    },
    "props": {
      "locale": "de",
      "translations": {
        "de": "/de/doku",
        "en": "/docs",
      },
    },
  },
]
`;

exports[`paths > generates rssXmlPaths 1`] = `
[
  {
    "params": {
      "locale": undefined,
    },
    "props": {
      "locale": undefined,
    },
  },
  {
    "params": {
      "locale": "-en",
    },
    "props": {
      "locale": "en",
    },
  },
  {
    "params": {
      "locale": "-de",
    },
    "props": {
      "locale": "de",
    },
  },
]
`;
